--- a/Flight_Controller.ioc
+++ b/Flight_Controller.ioc
@@ -1,12 +1,20 @@
 #MicroXplorer Configuration settings - do not modify
+ADC1.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_4
+ADC1.IPParameters=Rank-0\#ChannelRegularConversion,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,OffsetNumber-0\#ChannelRegularConversion,OffsetSignedSaturation-0\#ChannelRegularConversion,NbrOfConversionFlag,master
+ADC1.NbrOfConversionFlag=1
+ADC1.OffsetNumber-0\#ChannelRegularConversion=ADC_OFFSET_NONE
+ADC1.OffsetSignedSaturation-0\#ChannelRegularConversion=DISABLE
+ADC1.Rank-0\#ChannelRegularConversion=1
+ADC1.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_1CYCLE_5
+ADC1.master=1
 CAD.formats=
 CAD.pinconfig=
 CAD.provider=
 CORTEX_M7.IPParameters=default_mode_Activation
 CORTEX_M7.default_mode_Activation=1
-FDCAN1.CalculateBaudRateNominal=1041666
-FDCAN1.CalculateTimeBitNominal=960
-FDCAN1.CalculateTimeQuantumNominal=320.0
+FDCAN1.CalculateBaudRateNominal=1083333
+FDCAN1.CalculateTimeBitNominal=923
+FDCAN1.CalculateTimeQuantumNominal=307.6923076923077
 FDCAN1.IPParameters=CalculateTimeQuantumNominal,CalculateTimeBitNominal,CalculateBaudRateNominal
 File.Version=6
 GPIO.groupedBy=
@@ -70,61 +78,78 @@ MMTConfigApplied=false
 MMTSectionSuffix=
 Mcu.CPN=STM32H743VIT6
 Mcu.Family=STM32H7
-Mcu.IP0=CORTEX_M7
-Mcu.IP1=DEBUG
-Mcu.IP10=SPI3
-Mcu.IP11=SYS
-Mcu.IP12=USART1
-Mcu.IP13=USART2
-Mcu.IP14=USART3
-Mcu.IP15=USART6
-Mcu.IP16=USB_OTG_FS
-Mcu.IP2=FDCAN1
-Mcu.IP3=I2C1
-Mcu.IP4=I2C2
-Mcu.IP5=MEMORYMAP
-Mcu.IP6=NVIC
-Mcu.IP7=RCC
-Mcu.IP8=SDMMC1
-Mcu.IP9=SPI1
-Mcu.IPNb=17
+Mcu.IP0=ADC1
+Mcu.IP1=CORTEX_M7
+Mcu.IP10=SPI1
+Mcu.IP11=SPI2
+Mcu.IP12=SPI3
+Mcu.IP13=SYS
+Mcu.IP14=TIM1
+Mcu.IP15=TIM8
+Mcu.IP16=UART8
+Mcu.IP17=USART1
+Mcu.IP18=USART2
+Mcu.IP19=USART3
+Mcu.IP2=DEBUG
+Mcu.IP20=USB_OTG_FS
+Mcu.IP3=FDCAN1
+Mcu.IP4=I2C1
+Mcu.IP5=I2C2
+Mcu.IP6=MEMORYMAP
+Mcu.IP7=NVIC
+Mcu.IP8=RCC
+Mcu.IP9=SDMMC2
+Mcu.IPNb=21
 Mcu.Name=STM32H743VITx
 Mcu.Package=LQFP100
 Mcu.Pin0=PH0-OSC_IN (PH0)
 Mcu.Pin1=PH1-OSC_OUT (PH1)
-Mcu.Pin10=PB15
-Mcu.Pin11=PD8
-Mcu.Pin12=PD9
-Mcu.Pin13=PC6
-Mcu.Pin14=PC7
-Mcu.Pin15=PC8
-Mcu.Pin16=PC9
-Mcu.Pin17=PA11
-Mcu.Pin18=PA12
-Mcu.Pin19=PA13 (JTMS/SWDIO)
-Mcu.Pin2=PA2
-Mcu.Pin20=PA14 (JTCK/SWCLK)
-Mcu.Pin21=PC10
-Mcu.Pin22=PC11
-Mcu.Pin23=PC12
-Mcu.Pin24=PD2
-Mcu.Pin25=PB3 (JTDO/TRACESWO)
-Mcu.Pin26=PB4 (NJTRST)
-Mcu.Pin27=PB5
-Mcu.Pin28=PB6
-Mcu.Pin29=PB7
-Mcu.Pin3=PA3
-Mcu.Pin30=PB8
-Mcu.Pin31=PB9
-Mcu.Pin32=VP_SYS_VS_Systick
-Mcu.Pin33=VP_MEMORYMAP_VS_MEMORYMAP
-Mcu.Pin4=PA5
-Mcu.Pin5=PA6
-Mcu.Pin6=PA7
-Mcu.Pin7=PB10
-Mcu.Pin8=PB11
-Mcu.Pin9=PB14
-Mcu.PinsNb=34
+Mcu.Pin10=PA7
+Mcu.Pin11=PC4
+Mcu.Pin12=PB1
+Mcu.Pin13=PE9
+Mcu.Pin14=PE11
+Mcu.Pin15=PE13
+Mcu.Pin16=PE14
+Mcu.Pin17=PB10
+Mcu.Pin18=PB11
+Mcu.Pin19=PB13
+Mcu.Pin2=PC1
+Mcu.Pin20=PB14
+Mcu.Pin21=PB15
+Mcu.Pin22=PD8
+Mcu.Pin23=PD9
+Mcu.Pin24=PC6
+Mcu.Pin25=PC7
+Mcu.Pin26=PA9
+Mcu.Pin27=PA10
+Mcu.Pin28=PA11
+Mcu.Pin29=PA12
+Mcu.Pin3=PC2_C
+Mcu.Pin30=PA13 (JTMS/SWDIO)
+Mcu.Pin31=PA14 (JTCK/SWCLK)
+Mcu.Pin32=PC10
+Mcu.Pin33=PC11
+Mcu.Pin34=PD0
+Mcu.Pin35=PD1
+Mcu.Pin36=PB3 (JTDO/TRACESWO)
+Mcu.Pin37=PB4 (NJTRST)
+Mcu.Pin38=PB5
+Mcu.Pin39=PB6
+Mcu.Pin4=PC3_C
+Mcu.Pin40=PB7
+Mcu.Pin41=PE0
+Mcu.Pin42=PE1
+Mcu.Pin43=VP_SYS_VS_Systick
+Mcu.Pin44=VP_TIM1_VS_ClockSourceINT
+Mcu.Pin45=VP_TIM8_VS_ClockSourceINT
+Mcu.Pin46=VP_MEMORYMAP_VS_MEMORYMAP
+Mcu.Pin5=PA0
+Mcu.Pin6=PA2
+Mcu.Pin7=PA3
+Mcu.Pin8=PA5
+Mcu.Pin9=PA6
+Mcu.PinsNb=47
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32H743VITx
@@ -141,6 +166,10 @@ NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:false\:true\:false
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+PA0.Mode=SD_4_bits_Wide_bus
+PA0.Signal=SDMMC2_CMD
+PA10.Mode=Asynchronous
+PA10.Signal=USART1_RX
 PA11.Mode=Device_Only
 PA11.Signal=USB_OTG_FS_DM
 PA12.Mode=Device_Only
@@ -159,18 +188,24 @@ PA6.Mode=Full_Duplex_Master
 PA6.Signal=SPI1_MISO
 PA7.Mode=Full_Duplex_Master
 PA7.Signal=SPI1_MOSI
+PA9.Mode=Asynchronous
+PA9.Signal=USART1_TX
+PB1.Signal=ADCx_INP5
 PB10.Mode=I2C
 PB10.Signal=I2C2_SCL
 PB11.Mode=I2C
 PB11.Signal=I2C2_SDA
-PB14.Mode=Asynchronous
-PB14.Signal=USART1_TX
-PB15.Mode=Asynchronous
-PB15.Signal=USART1_RX
-PB3\ (JTDO/TRACESWO).Mode=Full_Duplex_Master
-PB3\ (JTDO/TRACESWO).Signal=SPI3_SCK
-PB4\ (NJTRST).Mode=Full_Duplex_Master
-PB4\ (NJTRST).Signal=SPI3_MISO
+PB13.Locked=true
+PB13.Mode=Full_Duplex_Master
+PB13.Signal=SPI2_SCK
+PB14.Mode=SD_4_bits_Wide_bus
+PB14.Signal=SDMMC2_D0
+PB15.Mode=SD_4_bits_Wide_bus
+PB15.Signal=SDMMC2_D1
+PB3\ (JTDO/TRACESWO).Mode=SD_4_bits_Wide_bus
+PB3\ (JTDO/TRACESWO).Signal=SDMMC2_D2
+PB4\ (NJTRST).Mode=SD_4_bits_Wide_bus
+PB4\ (NJTRST).Signal=SDMMC2_D3
 PB5.Locked=true
 PB5.Mode=Full_Duplex_Master
 PB5.Signal=SPI3_MOSI
@@ -178,32 +213,35 @@ PB6.Mode=I2C
 PB6.Signal=I2C1_SCL
 PB7.Mode=I2C
 PB7.Signal=I2C1_SDA
-PB8.Locked=true
-PB8.Mode=FDCAN_Activate
-PB8.Signal=FDCAN1_RX
-PB9.Locked=true
-PB9.Mode=FDCAN_Activate
-PB9.Signal=FDCAN1_TX
-PC10.Mode=SD_4_bits_Wide_bus
-PC10.Signal=SDMMC1_D2
-PC11.Mode=SD_4_bits_Wide_bus
-PC11.Signal=SDMMC1_D3
-PC12.Mode=SD_4_bits_Wide_bus
-PC12.Signal=SDMMC1_CK
-PC6.Mode=Asynchronous
-PC6.Signal=USART6_TX
-PC7.Mode=Asynchronous
-PC7.Signal=USART6_RX
-PC8.Mode=SD_4_bits_Wide_bus
-PC8.Signal=SDMMC1_D0
-PC9.Mode=SD_4_bits_Wide_bus
-PC9.Signal=SDMMC1_D1
-PD2.Mode=SD_4_bits_Wide_bus
-PD2.Signal=SDMMC1_CMD
+PC1.Mode=SD_4_bits_Wide_bus
+PC1.Signal=SDMMC2_CK
+PC10.Mode=Full_Duplex_Master
+PC10.Signal=SPI3_SCK
+PC11.Mode=Full_Duplex_Master
+PC11.Signal=SPI3_MISO
+PC2_C.Mode=Full_Duplex_Master
+PC2_C.Signal=SPI2_MISO
+PC3_C.Mode=Full_Duplex_Master
+PC3_C.Signal=SPI2_MOSI
+PC4.Signal=ADCx_INP4
+PC6.Signal=S_TIM8_CH1
+PC7.Signal=S_TIM8_CH2
+PD0.Mode=FDCAN_Activate
+PD0.Signal=FDCAN1_RX
+PD1.Mode=FDCAN_Activate
+PD1.Signal=FDCAN1_TX
 PD8.Mode=Asynchronous
 PD8.Signal=USART3_TX
 PD9.Mode=Asynchronous
 PD9.Signal=USART3_RX
+PE0.Mode=Asynchronous
+PE0.Signal=UART8_RX
+PE1.Mode=Asynchronous
+PE1.Signal=UART8_TX
+PE11.Signal=S_TIM1_CH2
+PE13.Signal=S_TIM1_CH3
+PE14.Signal=S_TIM1_CH4
+PE9.Signal=S_TIM1_CH1
 PH0-OSC_IN\ (PH0).Mode=HSE-External-Oscillator
 PH0-OSC_IN\ (PH0).Signal=RCC_OSC_IN
 PH1-OSC_OUT\ (PH1).Mode=HSE-External-Oscillator
@@ -241,8 +279,8 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
-RCC.ADCFreq_Value=48375000
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_FDCAN1_Init-FDCAN1-false-HAL-true,4-MX_I2C1_Init-I2C1-false-HAL-true,5-MX_I2C2_Init-I2C2-false-HAL-true,6-MX_SDMMC1_SD_Init-SDMMC1-false-HAL-true,7-MX_SPI1_Init-SPI1-false-HAL-true,8-MX_SPI3_Init-SPI3-false-HAL-true,9-MX_USART1_UART_Init-USART1-false-HAL-true,10-MX_USART2_UART_Init-USART2-false-HAL-true,11-MX_USART3_UART_Init-USART3-false-HAL-true,12-MX_USART6_UART_Init-USART6-false-HAL-true,13-MX_USB_OTG_FS_PCD_Init-USB_OTG_FS-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
+RCC.ADCFreq_Value=75000000
 RCC.AHB12Freq_Value=64000000
 RCC.AHB4Freq_Value=64000000
 RCC.APB1Freq_Value=32000000
@@ -257,21 +295,23 @@ RCC.CpuClockFreq_Value=64000000
 RCC.D1CPREFreq_Value=64000000
 RCC.D2PPRE1=RCC_APB1_DIV2
 RCC.D2PPRE2=RCC_APB2_DIV2
-RCC.DFSDMACLkFreq_Value=50000000
+RCC.DFSDMACLkFreq_Value=52000000
 RCC.DFSDMFreq_Value=32000000
 RCC.DIVM1=2
-RCC.DIVN1=12
-RCC.DIVP1Freq_Value=75000000
-RCC.DIVP2Freq_Value=48375000
+RCC.DIVM2=2
+RCC.DIVN1=13
+RCC.DIVN2=12
+RCC.DIVP1Freq_Value=78000000
+RCC.DIVP2Freq_Value=75000000
 RCC.DIVP3Freq_Value=48375000
 RCC.DIVQ1=3
-RCC.DIVQ1Freq_Value=50000000
-RCC.DIVQ2Freq_Value=48375000
+RCC.DIVQ1Freq_Value=52000000
+RCC.DIVQ2Freq_Value=75000000
 RCC.DIVQ3Freq_Value=48375000
-RCC.DIVR1Freq_Value=75000000
-RCC.DIVR2Freq_Value=48375000
+RCC.DIVR1Freq_Value=78000000
+RCC.DIVR2Freq_Value=75000000
 RCC.DIVR3Freq_Value=48375000
-RCC.FDCANFreq_Value=50000000
+RCC.FDCANFreq_Value=52000000
 RCC.FMCFreq_Value=64000000
 RCC.FamilyName=M
 RCC.HCLK3ClockFreq_Value=64000000
@@ -280,7 +320,7 @@ RCC.HRTIMFreq_Value=64000000
 RCC.HSE_VALUE=24000000
 RCC.I2C123Freq_Value=32000000
 RCC.I2C4Freq_Value=64000000
-RCC.IPParameters=ADCFreq_Value,AHB12Freq_Value,AHB4Freq_Value,APB1Freq_Value,APB2Freq_Value,APB3Freq_Value,APB4Freq_Value,AXIClockFreq_Value,CECFreq_Value,CKPERFreq_Value,CortexFreq_Value,CpuClockFreq_Value,D1CPREFreq_Value,D2PPRE1,D2PPRE2,DFSDMACLkFreq_Value,DFSDMFreq_Value,DIVM1,DIVN1,DIVP1Freq_Value,DIVP2Freq_Value,DIVP3Freq_Value,DIVQ1,DIVQ1Freq_Value,DIVQ2Freq_Value,DIVQ3Freq_Value,DIVR1Freq_Value,DIVR2Freq_Value,DIVR3Freq_Value,FDCANFreq_Value,FMCFreq_Value,FamilyName,HCLK3ClockFreq_Value,HCLKFreq_Value,HRTIMFreq_Value,HSE_VALUE,I2C123Freq_Value,I2C4Freq_Value,LPTIM1Freq_Value,LPTIM2Freq_Value,LPTIM345Freq_Value,LPUART1Freq_Value,LTDCFreq_Value,MCO1PinFreq_Value,MCO2PinFreq_Value,PLL2FRACN,PLL3FRACN,PLLFRACN,QSPIFreq_Value,RNGFreq_Value,RTCFreq_Value,SAI1Freq_Value,SAI23Freq_Value,SAI4AFreq_Value,SAI4BFreq_Value,SDMMCFreq_Value,SPDIFRXFreq_Value,SPI123Freq_Value,SPI45Freq_Value,SPI6Freq_Value,SWPMI1Freq_Value,SYSCLKFreq_VALUE,Tim1OutputFreq_Value,Tim2OutputFreq_Value,TraceFreq_Value,USART16Freq_Value,USART234578Freq_Value,USBFreq_Value,VCO1OutputFreq_Value,VCO2OutputFreq_Value,VCO3OutputFreq_Value,VCOInput1Freq_Value,VCOInput2Freq_Value,VCOInput3Freq_Value
+RCC.IPParameters=ADCFreq_Value,AHB12Freq_Value,AHB4Freq_Value,APB1Freq_Value,APB2Freq_Value,APB3Freq_Value,APB4Freq_Value,AXIClockFreq_Value,CECFreq_Value,CKPERFreq_Value,CortexFreq_Value,CpuClockFreq_Value,D1CPREFreq_Value,D2PPRE1,D2PPRE2,DFSDMACLkFreq_Value,DFSDMFreq_Value,DIVM1,DIVM2,DIVN1,DIVN2,DIVP1Freq_Value,DIVP2Freq_Value,DIVP3Freq_Value,DIVQ1,DIVQ1Freq_Value,DIVQ2Freq_Value,DIVQ3Freq_Value,DIVR1Freq_Value,DIVR2Freq_Value,DIVR3Freq_Value,FDCANFreq_Value,FMCFreq_Value,FamilyName,HCLK3ClockFreq_Value,HCLKFreq_Value,HRTIMFreq_Value,HSE_VALUE,I2C123Freq_Value,I2C4Freq_Value,LPTIM1Freq_Value,LPTIM2Freq_Value,LPTIM345Freq_Value,LPUART1Freq_Value,LTDCFreq_Value,MCO1PinFreq_Value,MCO2PinFreq_Value,PLL2FRACN,PLL3FRACN,PLLFRACN,QSPIFreq_Value,RNGFreq_Value,RTCFreq_Value,SAI1Freq_Value,SAI23Freq_Value,SAI4AFreq_Value,SAI4BFreq_Value,SDMMCFreq_Value,SPDIFRXFreq_Value,SPI123Freq_Value,SPI45Freq_Value,SPI6Freq_Value,SWPMI1Freq_Value,SYSCLKFreq_VALUE,Tim1OutputFreq_Value,Tim2OutputFreq_Value,TraceFreq_Value,USART16Freq_Value,USART234578Freq_Value,USBFreq_Value,VCO1OutputFreq_Value,VCO2OutputFreq_Value,VCO3OutputFreq_Value,VCOInput1Freq_Value,VCOInput2Freq_Value,VCOInput3Freq_Value
 RCC.LPTIM1Freq_Value=32000000
 RCC.LPTIM2Freq_Value=64000000
 RCC.LPTIM345Freq_Value=64000000
@@ -288,19 +328,19 @@ RCC.LPUART1Freq_Value=64000000
 RCC.LTDCFreq_Value=48375000
 RCC.MCO1PinFreq_Value=64000000
 RCC.MCO2PinFreq_Value=64000000
-RCC.PLL2FRACN=0
+RCC.PLL2FRACN=4096
 RCC.PLL3FRACN=0
-RCC.PLLFRACN=4096
+RCC.PLLFRACN=0
 RCC.QSPIFreq_Value=64000000
 RCC.RNGFreq_Value=48000000
 RCC.RTCFreq_Value=32000
-RCC.SAI1Freq_Value=50000000
-RCC.SAI23Freq_Value=50000000
-RCC.SAI4AFreq_Value=50000000
-RCC.SAI4BFreq_Value=50000000
-RCC.SDMMCFreq_Value=50000000
-RCC.SPDIFRXFreq_Value=50000000
-RCC.SPI123Freq_Value=50000000
+RCC.SAI1Freq_Value=52000000
+RCC.SAI23Freq_Value=52000000
+RCC.SAI4AFreq_Value=52000000
+RCC.SAI4BFreq_Value=52000000
+RCC.SDMMCFreq_Value=52000000
+RCC.SPDIFRXFreq_Value=52000000
+RCC.SPI123Freq_Value=52000000
 RCC.SPI45Freq_Value=32000000
 RCC.SPI6Freq_Value=64000000
 RCC.SWPMI1Freq_Value=32000000
@@ -310,35 +350,66 @@ RCC.Tim2OutputFreq_Value=64000000
 RCC.TraceFreq_Value=64000000
 RCC.USART16Freq_Value=32000000
 RCC.USART234578Freq_Value=32000000
-RCC.USBFreq_Value=50000000
-RCC.VCO1OutputFreq_Value=150000000
-RCC.VCO2OutputFreq_Value=96750000
+RCC.USBFreq_Value=52000000
+RCC.VCO1OutputFreq_Value=156000000
+RCC.VCO2OutputFreq_Value=150000000
 RCC.VCO3OutputFreq_Value=96750000
 RCC.VCOInput1Freq_Value=12000000
-RCC.VCOInput2Freq_Value=750000
+RCC.VCOInput2Freq_Value=12000000
 RCC.VCOInput3Freq_Value=750000
-SPI1.CalculateBaudRate=25.0 MBits/s
+SH.ADCx_INP4.0=ADC1_INP4,IN4-Single-Ended
+SH.ADCx_INP4.ConfNb=1
+SH.ADCx_INP5.0=ADC1_INP5,IN5-Single-Ended
+SH.ADCx_INP5.ConfNb=1
+SH.S_TIM1_CH1.0=TIM1_CH1,PWM Generation1 CH1
+SH.S_TIM1_CH1.ConfNb=1
+SH.S_TIM1_CH2.0=TIM1_CH2,PWM Generation2 CH2
+SH.S_TIM1_CH2.ConfNb=1
+SH.S_TIM1_CH3.0=TIM1_CH3,Output Compare3 CH3
+SH.S_TIM1_CH3.ConfNb=1
+SH.S_TIM1_CH4.0=TIM1_CH4,PWM Generation4 CH4
+SH.S_TIM1_CH4.ConfNb=1
+SH.S_TIM8_CH1.0=TIM8_CH1,Output Compare1 CH1
+SH.S_TIM8_CH1.ConfNb=1
+SH.S_TIM8_CH2.0=TIM8_CH2,PWM Generation2 CH2
+SH.S_TIM8_CH2.ConfNb=1
+SPI1.CalculateBaudRate=26.0 MBits/s
 SPI1.Direction=SPI_DIRECTION_2LINES
 SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate
 SPI1.Mode=SPI_MODE_MASTER
 SPI1.VirtualType=VM_MASTER
-SPI3.CalculateBaudRate=25.0 MBits/s
+SPI2.CalculateBaudRate=26.0 MBits/s
+SPI2.Direction=SPI_DIRECTION_2LINES
+SPI2.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate
+SPI2.Mode=SPI_MODE_MASTER
+SPI2.VirtualType=VM_MASTER
+SPI3.CalculateBaudRate=26.0 MBits/s
 SPI3.Direction=SPI_DIRECTION_2LINES
 SPI3.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate
 SPI3.Mode=SPI_MODE_MASTER
 SPI3.VirtualType=VM_MASTER
+TIM1.Channel-Output\ Compare3\ CH3=TIM_CHANNEL_3
+TIM1.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
+TIM1.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
+TIM1.Channel-PWM\ Generation4\ CH4=TIM_CHANNEL_4
+TIM1.IPParameters=Channel-PWM Generation1 CH1,Channel-PWM Generation2 CH2,Channel-Output Compare3 CH3,Channel-PWM Generation4 CH4
+TIM8.Channel-Output\ Compare1\ CH1=TIM_CHANNEL_1
+TIM8.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
+TIM8.IPParameters=Channel-Output Compare1 CH1,Channel-PWM Generation2 CH2
 USART1.IPParameters=VirtualMode-Asynchronous
 USART1.VirtualMode-Asynchronous=VM_ASYNC
 USART2.IPParameters=VirtualMode-Asynchronous
 USART2.VirtualMode-Asynchronous=VM_ASYNC
 USART3.IPParameters=VirtualMode-Asynchronous
 USART3.VirtualMode-Asynchronous=VM_ASYNC
-USART6.IPParameters=VirtualMode
-USART6.VirtualMode=VM_ASYNC
 USB_OTG_FS.IPParameters=VirtualMode
 USB_OTG_FS.VirtualMode=Device_Only
 VP_MEMORYMAP_VS_MEMORYMAP.Mode=CurAppReg
 VP_MEMORYMAP_VS_MEMORYMAP.Signal=MEMORYMAP_VS_MEMORYMAP
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
+VP_TIM1_VS_ClockSourceINT.Mode=Internal
+VP_TIM1_VS_ClockSourceINT.Signal=TIM1_VS_ClockSourceINT
+VP_TIM8_VS_ClockSourceINT.Mode=Internal
+VP_TIM8_VS_ClockSourceINT.Signal=TIM8_VS_ClockSourceINT
 board=custom
