Created altium project

--- a/Flight_Controller.ioc
+++ b/Flight_Controller.ioc
@@ -7,9 +7,9 @@ ADC1.OffsetSignedSaturation-0\#ChannelRegularConversion=DISABLE
 ADC1.Rank-0\#ChannelRegularConversion=1
 ADC1.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_1CYCLE_5
 ADC1.master=1
-CAD.formats=
-CAD.pinconfig=
-CAD.provider=
+CAD.formats=[{"id"\:"altium","cad_product"\:"Altium Designer","cad_family"\:"Altium Designer"}]
+CAD.pinconfig=Dual
+CAD.provider=Component Search Engine
 CORTEX_M7.IPParameters=default_mode_Activation
 CORTEX_M7.default_mode_Activation=1
 FDCAN1.CalculateBaudRateNominal=1041666
