--- a/Flight_Controller.ioc
+++ b/Flight_Controller.ioc
@@ -12,18 +12,18 @@ CAD.pinconfig=Dual
 CAD.provider=Component Search Engine
 CORTEX_M7.IPParameters=default_mode_Activation
 CORTEX_M7.default_mode_Activation=1
-FDCAN1.CalculateBaudRateNominal=1041666
-FDCAN1.CalculateTimeBitNominal=960
-FDCAN1.CalculateTimeQuantumNominal=320.0
+FDCAN1.CalculateBaudRateNominal=1666666
+FDCAN1.CalculateTimeBitNominal=600
+FDCAN1.CalculateTimeQuantumNominal=200.0
 FDCAN1.IPParameters=CalculateTimeQuantumNominal,CalculateTimeBitNominal,CalculateBaudRateNominal
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
 I2C1.IPParameters=Timing
-I2C1.Timing=0x00909FCE
+I2C1.Timing=0x10C0ECFF
 I2C2.IPParameters=Timing
-I2C2.Timing=0x00909FCE
+I2C2.Timing=0x10C0ECFF
 I2C3.IPParameters=Timing
-I2C3.Timing=0x00909FCE
+I2C3.Timing=0x10C0ECFF
 KeepUserPlacement=false
 MMTAppReg1.MEMORYMAP.AppRegionName=DTCMRAM
 MMTAppReg1.MEMORYMAP.ContextName=Cortex-M7NS
@@ -397,84 +397,95 @@ ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
 ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_FDCAN1_Init-FDCAN1-false-HAL-true,4-MX_I2C1_Init-I2C1-false-HAL-true,5-MX_I2C2_Init-I2C2-false-HAL-true,6-MX_SPI1_Init-SPI1-false-HAL-true,7-MX_SPI3_Init-SPI3-false-HAL-true,8-MX_USART1_UART_Init-USART1-false-HAL-true,9-MX_USART2_UART_Init-USART2-false-HAL-true,10-MX_USART3_UART_Init-USART3-false-HAL-true,11-MX_USB_OTG_FS_PCD_Init-USB_OTG_FS-false-HAL-true,12-MX_ADC1_Init-ADC1-false-HAL-true,13-MX_SPI2_Init-SPI2-false-HAL-true,14-MX_TIM1_Init-TIM1-false-HAL-true,15-MX_TIM8_Init-TIM8-false-HAL-true,16-MX_UART8_Init-UART8-false-HAL-true,17-MX_I2C3_Init-I2C3-false-HAL-true,18-MX_SPI4_Init-SPI4-false-HAL-true,19-MX_TIM15_Init-TIM15-false-HAL-true,20-MX_UART7_Init-UART7-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
-RCC.ADCFreq_Value=78000000
-RCC.AHB12Freq_Value=75000000
-RCC.AHB4Freq_Value=75000000
-RCC.APB1Freq_Value=37500000
-RCC.APB2Freq_Value=37500000
-RCC.APB3Freq_Value=75000000
-RCC.APB4Freq_Value=75000000
-RCC.AXIClockFreq_Value=75000000
+RCC.ADCFreq_Value=80000000
+RCC.AHB12Freq_Value=200000000
+RCC.AHB4Freq_Value=200000000
+RCC.APB1Freq_Value=100000000
+RCC.APB2Freq_Value=100000000
+RCC.APB3Freq_Value=100000000
+RCC.APB4Freq_Value=100000000
+RCC.AXIClockFreq_Value=200000000
 RCC.CECFreq_Value=32000
 RCC.CKPERFreq_Value=64000000
-RCC.CortexFreq_Value=75000000
-RCC.CpuClockFreq_Value=75000000
-RCC.D1CPREFreq_Value=75000000
+RCC.CortexFreq_Value=400000000
+RCC.CpuClockFreq_Value=400000000
+RCC.D1CPREFreq_Value=400000000
+RCC.D1PPRE=RCC_APB3_DIV2
 RCC.D2PPRE1=RCC_APB1_DIV2
 RCC.D2PPRE2=RCC_APB2_DIV2
-RCC.DFSDMACLkFreq_Value=50000000
-RCC.DFSDMFreq_Value=37500000
-RCC.DIVM1=2
-RCC.DIVM2=2
-RCC.DIVN1=12
-RCC.DIVN2=13
-RCC.DIVP1Freq_Value=75000000
-RCC.DIVP2Freq_Value=78000000
-RCC.DIVP3Freq_Value=48375000
-RCC.DIVQ1=3
-RCC.DIVQ1Freq_Value=50000000
-RCC.DIVQ2Freq_Value=78000000
-RCC.DIVQ3Freq_Value=48375000
-RCC.DIVR1Freq_Value=75000000
-RCC.DIVR2Freq_Value=78000000
-RCC.DIVR3Freq_Value=48375000
-RCC.FDCANFreq_Value=50000000
-RCC.FMCFreq_Value=75000000
+RCC.D3PPRE=RCC_APB4_DIV2
+RCC.DFSDMACLkFreq_Value=200000000
+RCC.DFSDMFreq_Value=100000000
+RCC.DIVM1=4
+RCC.DIVM2=4
+RCC.DIVM3=4
+RCC.DIVN1=200
+RCC.DIVN2=80
+RCC.DIVN3=96
+RCC.DIVP1Freq_Value=400000000
+RCC.DIVP2=4
+RCC.DIVP2Freq_Value=80000000
+RCC.DIVP3Freq_Value=192000000
+RCC.DIVQ1=4
+RCC.DIVQ1Freq_Value=200000000
+RCC.DIVQ2=4
+RCC.DIVQ2Freq_Value=80000000
+RCC.DIVQ3=8
+RCC.DIVQ3Freq_Value=48000000
+RCC.DIVR1=8
+RCC.DIVR1Freq_Value=100000000
+RCC.DIVR2Freq_Value=160000000
+RCC.DIVR3Freq_Value=192000000
+RCC.FDCANCLockSelection=RCC_FDCANCLKSOURCE_PLL2
+RCC.FDCANFreq_Value=80000000
+RCC.FMCFreq_Value=200000000
 RCC.FamilyName=M
-RCC.HCLK3ClockFreq_Value=75000000
-RCC.HCLKFreq_Value=75000000
-RCC.HRTIMFreq_Value=75000000
-RCC.HSE_VALUE=24000000
-RCC.I2C123Freq_Value=37500000
-RCC.I2C4Freq_Value=75000000
-RCC.IPParameters=ADCFreq_Value,AHB12Freq_Value,AHB4Freq_Value,APB1Freq_Value,APB2Freq_Value,APB3Freq_Value,APB4Freq_Value,AXIClockFreq_Value,CECFreq_Value,CKPERFreq_Value,CortexFreq_Value,CpuClockFreq_Value,D1CPREFreq_Value,D2PPRE1,D2PPRE2,DFSDMACLkFreq_Value,DFSDMFreq_Value,DIVM1,DIVM2,DIVN1,DIVN2,DIVP1Freq_Value,DIVP2Freq_Value,DIVP3Freq_Value,DIVQ1,DIVQ1Freq_Value,DIVQ2Freq_Value,DIVQ3Freq_Value,DIVR1Freq_Value,DIVR2Freq_Value,DIVR3Freq_Value,FDCANFreq_Value,FMCFreq_Value,FamilyName,HCLK3ClockFreq_Value,HCLKFreq_Value,HRTIMFreq_Value,HSE_VALUE,I2C123Freq_Value,I2C4Freq_Value,LPTIM1Freq_Value,LPTIM2Freq_Value,LPTIM345Freq_Value,LPUART1Freq_Value,LTDCFreq_Value,MCO1PinFreq_Value,MCO2PinFreq_Value,PLL2FRACN,PLL3FRACN,PLLFRACN,QSPIFreq_Value,RNGFreq_Value,RTCFreq_Value,SAI1Freq_Value,SAI23Freq_Value,SAI4AFreq_Value,SAI4BFreq_Value,SDMMCFreq_Value,SPDIFRXFreq_Value,SPI123Freq_Value,SPI45Freq_Value,SPI6Freq_Value,SWPMI1Freq_Value,SYSCLKFreq_VALUE,SYSCLKSource,Tim1OutputFreq_Value,Tim2OutputFreq_Value,TraceFreq_Value,USART16Freq_Value,USART234578Freq_Value,USBFreq_Value,VCO1OutputFreq_Value,VCO2OutputFreq_Value,VCO3OutputFreq_Value,VCOInput1Freq_Value,VCOInput2Freq_Value,VCOInput3Freq_Value
-RCC.LPTIM1Freq_Value=37500000
-RCC.LPTIM2Freq_Value=75000000
-RCC.LPTIM345Freq_Value=75000000
-RCC.LPUART1Freq_Value=75000000
-RCC.LTDCFreq_Value=48375000
+RCC.HCLK3ClockFreq_Value=200000000
+RCC.HCLKFreq_Value=200000000
+RCC.HPRE=RCC_HCLK_DIV2
+RCC.HRTIMFreq_Value=200000000
+RCC.HSE_VALUE=16000000
+RCC.I2C123Freq_Value=100000000
+RCC.I2C4Freq_Value=100000000
+RCC.IPParameters=ADCFreq_Value,AHB12Freq_Value,AHB4Freq_Value,APB1Freq_Value,APB2Freq_Value,APB3Freq_Value,APB4Freq_Value,AXIClockFreq_Value,CECFreq_Value,CKPERFreq_Value,CortexFreq_Value,CpuClockFreq_Value,D1CPREFreq_Value,D1PPRE,D2PPRE1,D2PPRE2,D3PPRE,DFSDMACLkFreq_Value,DFSDMFreq_Value,DIVM1,DIVM2,DIVM3,DIVN1,DIVN2,DIVN3,DIVP1Freq_Value,DIVP2,DIVP2Freq_Value,DIVP3Freq_Value,DIVQ1,DIVQ1Freq_Value,DIVQ2,DIVQ2Freq_Value,DIVQ3,DIVQ3Freq_Value,DIVR1,DIVR1Freq_Value,DIVR2Freq_Value,DIVR3Freq_Value,FDCANCLockSelection,FDCANFreq_Value,FMCFreq_Value,FamilyName,HCLK3ClockFreq_Value,HCLKFreq_Value,HPRE,HRTIMFreq_Value,HSE_VALUE,I2C123Freq_Value,I2C4Freq_Value,LPTIM1Freq_Value,LPTIM2Freq_Value,LPTIM345Freq_Value,LPUART1Freq_Value,LTDCFreq_Value,MCO1PinFreq_Value,MCO2PinFreq_Value,PLL2FRACN,PLL3FRACN,PLLFRACN,QSPIFreq_Value,RNGFreq_Value,RTCFreq_Value,SAI1Freq_Value,SAI23Freq_Value,SAI4AFreq_Value,SAI4BFreq_Value,SDMMCFreq_Value,SPDIFRXFreq_Value,SPI123Freq_Value,SPI45Freq_Value,SPI6Freq_Value,SWPMI1Freq_Value,SYSCLKFreq_VALUE,SYSCLKSource,Tim1OutputFreq_Value,Tim2OutputFreq_Value,TraceFreq_Value,USART16Freq_Value,USART234578Freq_Value,USBCLockSelection,USBFreq_Value,VCO1OutputFreq_Value,VCO2OutputFreq_Value,VCO3OutputFreq_Value,VCOInput1Freq_Value,VCOInput2Freq_Value,VCOInput3Freq_Value
+RCC.LPTIM1Freq_Value=100000000
+RCC.LPTIM2Freq_Value=100000000
+RCC.LPTIM345Freq_Value=100000000
+RCC.LPUART1Freq_Value=100000000
+RCC.LTDCFreq_Value=192000000
 RCC.MCO1PinFreq_Value=64000000
-RCC.MCO2PinFreq_Value=75000000
+RCC.MCO2PinFreq_Value=400000000
 RCC.PLL2FRACN=0
 RCC.PLL3FRACN=0
-RCC.PLLFRACN=4096
-RCC.QSPIFreq_Value=75000000
+RCC.PLLFRACN=0
+RCC.QSPIFreq_Value=200000000
 RCC.RNGFreq_Value=48000000
 RCC.RTCFreq_Value=32000
-RCC.SAI1Freq_Value=50000000
-RCC.SAI23Freq_Value=50000000
-RCC.SAI4AFreq_Value=50000000
-RCC.SAI4BFreq_Value=50000000
-RCC.SDMMCFreq_Value=50000000
-RCC.SPDIFRXFreq_Value=50000000
-RCC.SPI123Freq_Value=50000000
-RCC.SPI45Freq_Value=37500000
-RCC.SPI6Freq_Value=75000000
-RCC.SWPMI1Freq_Value=37500000
-RCC.SYSCLKFreq_VALUE=75000000
+RCC.SAI1Freq_Value=200000000
+RCC.SAI23Freq_Value=200000000
+RCC.SAI4AFreq_Value=200000000
+RCC.SAI4BFreq_Value=200000000
+RCC.SDMMCFreq_Value=200000000
+RCC.SPDIFRXFreq_Value=200000000
+RCC.SPI123Freq_Value=200000000
+RCC.SPI45Freq_Value=100000000
+RCC.SPI6Freq_Value=100000000
+RCC.SWPMI1Freq_Value=100000000
+RCC.SYSCLKFreq_VALUE=400000000
 RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
-RCC.Tim1OutputFreq_Value=75000000
-RCC.Tim2OutputFreq_Value=75000000
-RCC.TraceFreq_Value=75000000
-RCC.USART16Freq_Value=37500000
-RCC.USART234578Freq_Value=37500000
-RCC.USBFreq_Value=50000000
-RCC.VCO1OutputFreq_Value=150000000
-RCC.VCO2OutputFreq_Value=156000000
-RCC.VCO3OutputFreq_Value=96750000
-RCC.VCOInput1Freq_Value=12000000
-RCC.VCOInput2Freq_Value=12000000
-RCC.VCOInput3Freq_Value=750000
+RCC.Tim1OutputFreq_Value=200000000
+RCC.Tim2OutputFreq_Value=200000000
+RCC.TraceFreq_Value=100000000
+RCC.USART16Freq_Value=100000000
+RCC.USART234578Freq_Value=100000000
+RCC.USBCLockSelection=RCC_USBCLKSOURCE_PLL3
+RCC.USBFreq_Value=48000000
+RCC.VCO1OutputFreq_Value=800000000
+RCC.VCO2OutputFreq_Value=320000000
+RCC.VCO3OutputFreq_Value=384000000
+RCC.VCOInput1Freq_Value=4000000
+RCC.VCOInput2Freq_Value=4000000
+RCC.VCOInput3Freq_Value=4000000
 SH.ADCx_INP14.0=ADC1_INP14,IN14-Single-Ended
 SH.ADCx_INP14.ConfNb=1
 SH.ADCx_INP15.0=ADC1_INP15,IN15-Single-Ended
@@ -491,22 +502,22 @@ SH.S_TIM8_CH1.0=TIM8_CH1,Output Compare1 CH1
 SH.S_TIM8_CH1.ConfNb=1
 SH.S_TIM8_CH2.0=TIM8_CH2,PWM Generation2 CH2
 SH.S_TIM8_CH2.ConfNb=1
-SPI1.CalculateBaudRate=25.0 MBits/s
+SPI1.CalculateBaudRate=100.0 MBits/s
 SPI1.Direction=SPI_DIRECTION_2LINES
 SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate
 SPI1.Mode=SPI_MODE_MASTER
 SPI1.VirtualType=VM_MASTER
-SPI2.CalculateBaudRate=25.0 MBits/s
+SPI2.CalculateBaudRate=100.0 MBits/s
 SPI2.Direction=SPI_DIRECTION_2LINES
 SPI2.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate
 SPI2.Mode=SPI_MODE_MASTER
 SPI2.VirtualType=VM_MASTER
-SPI3.CalculateBaudRate=25.0 MBits/s
+SPI3.CalculateBaudRate=100.0 MBits/s
 SPI3.Direction=SPI_DIRECTION_2LINES
 SPI3.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate
 SPI3.Mode=SPI_MODE_MASTER
 SPI3.VirtualType=VM_MASTER
-SPI4.CalculateBaudRate=18.75 MBits/s
+SPI4.CalculateBaudRate=50.0 MBits/s
 SPI4.Direction=SPI_DIRECTION_2LINES
 SPI4.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate
 SPI4.Mode=SPI_MODE_MASTER
