--- a/Flight_Controller.ioc
+++ b/Flight_Controller.ioc
@@ -109,8 +109,8 @@ Mcu.Name=STM32H743VITx
 Mcu.Package=LQFP100
 Mcu.Pin0=PE2
 Mcu.Pin1=PE3
-Mcu.Pin10=PA2
-Mcu.Pin11=PA3
+Mcu.Pin10=PA3
+Mcu.Pin11=PA4
 Mcu.Pin12=PA5
 Mcu.Pin13=PA6
 Mcu.Pin14=PA7
@@ -139,31 +139,32 @@ Mcu.Pin34=PA11
 Mcu.Pin35=PA12
 Mcu.Pin36=PA13 (JTMS/SWDIO)
 Mcu.Pin37=PA14 (JTCK/SWCLK)
-Mcu.Pin38=PC10
-Mcu.Pin39=PC11
+Mcu.Pin38=PA15 (JTDI)
+Mcu.Pin39=PC10
 Mcu.Pin4=PE6
-Mcu.Pin40=PC12
-Mcu.Pin41=PD0
-Mcu.Pin42=PD5
-Mcu.Pin43=PD6
-Mcu.Pin44=PB3 (JTDO/TRACESWO)
-Mcu.Pin45=PB6
-Mcu.Pin46=PB7
-Mcu.Pin47=PB8
-Mcu.Pin48=PB9
-Mcu.Pin49=PE0
-Mcu.Pin5=PC13
-Mcu.Pin50=PE1
-Mcu.Pin51=VP_SYS_VS_Systick
-Mcu.Pin52=VP_TIM1_VS_ClockSourceINT
-Mcu.Pin53=VP_TIM8_VS_ClockSourceINT
-Mcu.Pin54=VP_TIM15_VS_ClockSourceINT
-Mcu.Pin55=VP_MEMORYMAP_VS_MEMORYMAP
-Mcu.Pin6=PH0-OSC_IN (PH0)
-Mcu.Pin7=PH1-OSC_OUT (PH1)
-Mcu.Pin8=PC1
-Mcu.Pin9=PC2_C
-Mcu.PinsNb=56
+Mcu.Pin40=PC11
+Mcu.Pin41=PC12
+Mcu.Pin42=PD0
+Mcu.Pin43=PD5
+Mcu.Pin44=PD6
+Mcu.Pin45=PB3 (JTDO/TRACESWO)
+Mcu.Pin46=PB6
+Mcu.Pin47=PB7
+Mcu.Pin48=PB8
+Mcu.Pin49=PB9
+Mcu.Pin5=PH0-OSC_IN (PH0)
+Mcu.Pin50=PE0
+Mcu.Pin51=PE1
+Mcu.Pin52=VP_SYS_VS_Systick
+Mcu.Pin53=VP_TIM1_VS_ClockSourceINT
+Mcu.Pin54=VP_TIM8_VS_ClockSourceINT
+Mcu.Pin55=VP_TIM15_VS_ClockSourceINT
+Mcu.Pin56=VP_MEMORYMAP_VS_MEMORYMAP
+Mcu.Pin6=PH1-OSC_OUT (PH1)
+Mcu.Pin7=PC1
+Mcu.Pin8=PC2_C
+Mcu.Pin9=PA2
+Mcu.PinsNb=57
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32H743VITx
@@ -201,6 +202,10 @@ PA14\ (JTCK/SWCLK).GPIOParameters=GPIO_Label
 PA14\ (JTCK/SWCLK).GPIO_Label=SWCLK
 PA14\ (JTCK/SWCLK).Mode=Trace_Asynchronous_SW
 PA14\ (JTCK/SWCLK).Signal=DEBUG_JTCK-SWCLK
+PA15\ (JTDI).GPIOParameters=GPIO_Label
+PA15\ (JTDI).GPIO_Label=IMU2_INT
+PA15\ (JTDI).Locked=true
+PA15\ (JTDI).Signal=GPXTI15
 PA2.GPIOParameters=GPIO_Label
 PA2.GPIO_Label=ADC1_14_VBUS
 PA2.Locked=true
@@ -209,6 +214,10 @@ PA3.GPIOParameters=GPIO_Label
 PA3.GPIO_Label=ADC1_15_VBAT
 PA3.Locked=true
 PA3.Signal=ADCx_INP15
+PA4.GPIOParameters=GPIO_Label
+PA4.GPIO_Label=IMU1_INT
+PA4.Locked=true
+PA4.Signal=GPXTI4
 PA5.GPIOParameters=GPIO_Label
 PA5.GPIO_Label=IMU1_SCK
 PA5.Locked=true
@@ -283,10 +292,6 @@ PC12.GPIO_Label=IMU2_MOSI
 PC12.Locked=true
 PC12.Mode=Full_Duplex_Master
 PC12.Signal=SPI3_MOSI
-PC13.GPIOParameters=GPIO_Label
-PC13.GPIO_Label=SD_PWR_EN
-PC13.Locked=true
-PC13.Signal=GPIO_Output
 PC2_C.GPIOParameters=GPIO_Label
 PC2_C.GPIO_Label=FLASH_MISO
 PC2_C.Mode=Full_Duplex_Master
@@ -490,6 +495,10 @@ SH.ADCx_INP14.0=ADC1_INP14,IN14-Single-Ended
 SH.ADCx_INP14.ConfNb=1
 SH.ADCx_INP15.0=ADC1_INP15,IN15-Single-Ended
 SH.ADCx_INP15.ConfNb=1
+SH.GPXTI15.0=GPIO_EXTI15
+SH.GPXTI15.ConfNb=1
+SH.GPXTI4.0=GPIO_EXTI4
+SH.GPXTI4.ConfNb=1
 SH.S_TIM1_CH1.0=TIM1_CH1,PWM Generation1 CH1
 SH.S_TIM1_CH1.ConfNb=1
 SH.S_TIM1_CH2.0=TIM1_CH2,PWM Generation2 CH2
